[package]
name    = "echo-server"
version = "0.1.0"
edition = "2021"

[dependencies]
quinn            = { workspace = true }
rustls           = { workspace = true }
rcgen            = { workspace = true }
rustls-pemfile   = { workspace = true }
tokio            = { workspace = true }
thiserror        = { workspace = true }
tracing          = { workspace = true }
tracing-subscriber = { workspace = true }
