[package]
name    = "quic-mls"
version = "0.1.0"
edition = "2021"

[dependencies]
quinn-proto = { workspace = true }
bytes       = { workspace = true }
aes-gcm     = { workspace = true }
aes         = { workspace = true }
hkdf        = { workspace = true }
sha2        = { workspace = true }
mls-rs      = { workspace = true }

[dev-dependencies]
mls-rs-crypto-rustcrypto = { workspace = true }